--- a/index.html
+++ b/index.html
@@ -158,14 +158,6 @@ body, html {
 
   <div class="w3-row w3-padding-32 w3-section">
 
-    <div class="w3-col m4 w3-container">
-
-      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
-
-    </div>
-
-    <div class="w3-col m8 w3-panel">
-
       <div class="w3-large w3-margin-bottom">
 
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>india <br>
@@ -235,7 +227,7 @@ body, html {
 
   </div>
 
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">Skywebdevelopers🐦</a></p>
 
 </footer>
 
