--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ body, html {
 
   </div>
 
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">Skywebdevelopers🐦</a></p>
+  <p>Powered by <a href="%%" title="%%" target="_blank" class="w3-hover-text-green">Skywebdevelopers🐦</a></p>
 
 </footer>
 
