--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="##" type="image/icon type">
+<link rel="icon" href="IMG-20240302-WA0014.jpg" type="image/icon type">
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
@@ -147,6 +147,7 @@ body, html {
   </div>
 
 </div>
+  <img src="IMG-20240302-WA0014.jpg">
 
 <!-- Container (Contact Section) -->
 
