--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <body>
-      <title>W3.CSS Template</title>
+      <title>Skyweb🐦</title>
 
 <meta charset="UTF-8">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="IMG-20240302-WA0014.jpg" type="image/icon type">
 
@@ -13,91 +13,6 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<style>
-
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
-
-body, html {
-
-  height: 100%;
-
-  color: #777;
-
-  line-height: 1.8;
-
-}
-
-
-/* Create a Parallax Effect */
-
-.bgimg-1, .bgimg-2, .bgimg-3 {
-
-  background-attachment: fixed;
-
-  background-position: center;
-
-  background-repeat: no-repeat;
-
-  background-size: cover;
-
-}
-
-
-/* First image (Logo. Full height) */
-
-.bgimg-1 {
-
-  background-image: url('##');
-
-  min-height: 100%;
-
-}
-
-
-/* Second image (Portfolio) */
-
-.bgimg-2 {
-
-  background-image: url("##");
-
-  min-height: 400px;
-
-}
-
-
-/* Third image (Contact) */
-
-.bgimg-3 {
-
-  background-image: url("##");
-
-  min-height: 400px;
-
-}
-
-
-.w3-wide {letter-spacing: 10px;}
-
-.w3-hover-opacity {cursor: pointer;}
-
-
-/* Turn off parallax scrolling for tablets and phones */
-
-@media only screen and (max-device-width: 1600px) {
-
-  .bgimg-1, .bgimg-2, .bgimg-3 {
-
-    background-attachment: scroll;
-
-    min-height: 400px;
-
-  }
-
-}
-
-</style>
-
 </head>
 
 <body>
@@ -147,7 +62,7 @@ body, html {
   </div>
 
 </div>
-  <img src="IMG-20240302-WA0014.jpg">
+  <img src="IMG-20240302-WA0014.jpg" hight="500" width="500">
 
 <!-- Container (Contact Section) -->
 
