--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     </a>
 
-    <a href="#home" class="w3-bar-item w3-button">HOME</a>
+    <a href="#home" class="w3-bar-item w3-button">Welcome to Skyweb</a>
 
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
 
