--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
 
-    <i class="fa fa-instagram w3-hover-opacity"></i>
+   <a href="https://www.instagram.com/skyweb.__.developers?igsh=dmlkajN5bTJhOXhl"> <i class="fa fa-instagram w3-hover-opacity"></i></a>
 
     <i class="fa fa-snapchat w3-hover-opacity"></i>
 
