--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <div class="w3-content w3-container w3-padding-64" id="contact">
 
-  <h3 class="w3-center">WHERE I WORK</h3>
+  <h3 class="w3-center">we provide cheap and easy web sites for you at your prize</h3>
 
   <p class="w3-center"><em>I'd love your feedback!</em></p>
 
