--- a/index.html
+++ b/index.html
@@ -63,6 +63,47 @@
 
 </div>
   <img src="IMG-20240302-WA0014.jpg" hight="500" width="350">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<body>
+
+<div class="w3-container w3-blue">
+Skyweb developers</h1>
+
+<p>We create the below websites for you</p>
+
+</div>
+
+<div class="w3-row-padding">
+
+<div class="w3-third">
+
+<h2>Bussines web sites</h2>
+
+<p>Upload your web bussines web sites and publish your product </p>
+
+<p>it's best and easy way </p>
+
+</div>
+
+<div class="w3-third">
+
+<h2>Dynamic web sites</h2>
+
+<p>It's the best web sites for you we build for that you contact with customer and you</p>
+
+<p>It's use full for you all you need BWL here </p>
+
+</div>
+
+<div class="w3-third">
+
+<h2>Static web sites</h2>
+
+<p>we create the page that helps to build your page information to publish </p>
+
+<p>all you need BWl here</p><br>
+  </div> </div>
 
 <!-- Container (Contact Section) -->
 
