--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: 7828#8<br>
 
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>mail: skywebdevelopers123@gmail.com<br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>gmail-id:skywebdevelopers123@gmail.com<br>
 
       </div>
 
