--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 
       <div class="w3-large w3-margin-bottom">
 
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>india <br>
+        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"><br>india <br>
 
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: 7828#8<br>
+        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><br>7828#8<br>
 
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><br>gmail-id:skywebdevelopers123@gmail.com<br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><br>skywebdevelopers123@gmail.com<br>
 
       </div>
 
