--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
   <head>
     <body>
-      <title>Skyweb🐦</title>
+      
+
+<title>skybird🪽</title>
 
 <meta charset="UTF-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="icon" href="IMG-20240302-WA0014.jpg" type="image/icon type">
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,10 +16,12 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
 </head>
 
 <body>
-
 
 <!-- Navbar (sit on top) -->
 
@@ -30,7 +35,7 @@
 
     </a>
 
-    <a href="#home" class="w3-bar-item w3-button">Welcome to Skyweb</a>
+    <a href="#home" class="w3-bar-item w3-button">welcome to Skyweb</a>
 
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
 
@@ -63,25 +68,32 @@
 
 </div>
   <img src="IMG-20240302-WA0014.jpg" hight="500" width="350">
-
-
 <!-- Container (Contact Section) -->
 
 <div class="w3-content w3-container w3-padding-64" id="contact">
 
-  <h3 class="w3-center">we provide cheap and easy web sites for you at your prize</h3>
+  <h3 class="w3-center">WHERE I WORK</h3>
 
   <p class="w3-center"><em>I'd love your feedback!</em></p>
 
+
   <div class="w3-row w3-padding-32 w3-section">
+
+    <div class="w3-col m4 w3-container">
+
+      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
+
+    </div>
+
+    <div class="w3-col m8 w3-panel">
 
       <div class="w3-large w3-margin-bottom">
 
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right">india <br>
+        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>Telangana, Hyderabad<br>
 
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>7828#8<br>
+        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00 151515<br>
 
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>skywebdevelopers123@gmail.com<br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: skywebdevelopers123@gmail.com<br>
 
       </div>
 
@@ -132,7 +144,7 @@
 
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
 
-   <a href="https://www.instagram.com/skyweb.__.developers?igsh=dmlkajN5bTJhOXhl"> <i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
 
     <i class="fa fa-snapchat w3-hover-opacity"></i>
 
@@ -144,8 +156,11 @@
 
   </div>
 
-  <p>Powered by <a href="%%" title="%%" target="_blank" class="w3-hover-text-green">Skywebdevelopers🐦</a></p>
+  <p>Powered by <a href="#">SKYWEB🐦</a></p>
+
+</footer>
 <script>
+
 // Change style of navbar on scroll
 
 window.onscroll = function() {myFunction()};
@@ -185,8 +200,11 @@ function toggleFunction() {
 
 }
 
-  </script>
-</footer>
+</script>
+
+
+
+
     </body>
   </head>
 </html>
