--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     </a>
 
-    <a href="#home" class="w3-bar-item w3-button">welcome to Skyweb</a>
+    <a href="abbu.c" class="w3-bar-item w3-button">welcome to Skyweb</a>
 
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
 
