--- a/index.html
+++ b/index.html
@@ -173,18 +173,12 @@
             <div class="container">
                 <div class="row">
                     <!-- counter -->
-                    <div class="col-md-3 col-sm-6 bottom-margin text-center counter-section wow fadeInUp sm-margin-bottom-ten animated" data-wow-duration="300ms" style="visibility: visible; animation-duration: 300ms; animation-name: fadeInUp;">
-                        <i class="fa fa-beer medium-icon"></i>
-                        <span id="anim-number-pizza" class="counter-number"></span>
-                        <span class="timer counter alt-font appear" data-to="980" data-speed="7000">2800</span>
-                        <p class="counter-title">Beer Ordered</p>
-                    </div>
                     <!-- end counter -->
                     <!-- counter -->
                     <div class="col-md-3 col-sm-6 bottom-margin text-center counter-section wow fadeInUp sm-margin-bottom-ten animated" data-wow-duration="600ms" style="visibility: visible; animation-duration: 600ms; animation-name: fadeInUp;">
                         <i class="fa fa-heart medium-icon"></i>
                          <span class="timer counter alt-font appear" data-to="980" data-speed="7000">980</span>
-                        <span class="counter-title">Happy Clients</span>
+                        <span class="counter-title">websites we build</span>
                     </div>
                     <!-- end counter -->
                     <!-- counter -->
@@ -198,7 +192,7 @@
                     <div class="col-md-3 col-sm-6 text-center counter-section wow fadeInUp animated" data-wow-duration="1200ms" style="visibility: visible; animation-duration: 1200ms; animation-name: fadeInUp;">
                         <i class="fa fa-user medium-icon"></i>
                          <span class="timer counter alt-font appear" data-to="600" data-speed="7000">600</span>
-                        <span class="counter-title">Clients Served</span>
+                        <span class="counter-title">brands Served</span>
                     </div>
                     <!-- end counter -->
                 </div>
