--- a/index.html
+++ b/index.html
@@ -168,6 +168,104 @@
                                 myLink.addEventListener('click', function(e) {
                                   e.preventDefault();
                                 });</script>
+                                  
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.columns {
+  float: left;
+  width: 33.3%;
+  padding: 8px;
+}
+
+.price {
+  list-style-type: none;
+  border: 1px solid #eee;
+  margin: 0;
+  padding: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.price:hover {
+  box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+}
+
+.price .header {
+  background-color: #111;
+  color: white;
+  font-size: 25px;
+}
+
+.price li {
+  border-bottom: 1px solid #eee;
+  padding: 20px;
+  text-align: center;
+}
+
+.price .grey {
+  background-color: #eee;
+  font-size: 20px;
+}
+
+.button {
+  background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 10px 25px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+@media only screen and (max-width: 600px) {
+  .columns {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<h2 style="text-align:center">Responsive Pricing Tables</h2>
+
+<div class="columns">
+  <ul class="price">
+    <li class="header">Basic</li>
+    <li class="grey">2,999/rup year</li>
+    <li>5GB Storage</li>
+    <li>free domain</li>
+    <li>media upload</li>
+    <li>free maintanence</li>
+    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+  </ul>
+</div>
+
+<div class="columns">
+  <ul class="price">
+    <li class="header">Pro</li>
+    <li class="grey"> 4,999 rup/ year</li>
+    <li>15GB Storage</li>
+    <li>25 Emails</li>
+    <li>free Domains</li>
+    <li>free maintenance</li>
+    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+  </ul>
+</div>
+
+<div class="columns">
+  <ul class="price">
+    <li class="header">Premium</li>
+    <li class="grey"> 5,999 rup/ year</li>
+    <li>30GB Storage</li>
+    <li>50 Emails</li>
+    <li>free Domain</li>
+    <li>app support/free maintain</li>
+    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+  </ul>
+</div>
   
 
   <p class="w3-center"><em>I'd love your feedback!</em></p>
