--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 <div class="columns">
   <ul class="price">
     <li class="header">Basic</li>
-    <li class="grey">2,999/rup year</li>
+    <li class="grey">2,999₹/year</li>
     <li>5GB Storage</li>
     <li>free domain</li>
     <li>media upload</li>
@@ -246,7 +246,7 @@
 <div class="columns">
   <ul class="price">
     <li class="header">Pro</li>
-    <li class="grey"> 4,999 rup/ year</li>
+    <li class="grey"> 4,999₹/year</li>
     <li>15GB Storage</li>
     <li>25 Emails</li>
     <li>free Domains</li>
@@ -258,7 +258,7 @@
 <div class="columns">
   <ul class="price">
     <li class="header">Premium</li>
-    <li class="grey"> 5,999 rup/ year</li>
+    <li class="grey"> 5,999₹/year</li>
     <li>30GB Storage</li>
     <li>50 Emails</li>
     <li>free Domain</li>
