--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
 </div>
   <img src="IMG-20240302-WA0014.jpg" hight="500" width="350">
 <!-- Container (Contact Section) -->
+  <main class="container">
+  <p>Hello 👋 I'm</p>
+  <section class="animation">
+    <div class="first"><div>Carlos Córdova</div></div>
+    <div class="second"><div>Web Developer</div></div>
+    <div class="third"><div>Systems Engineer</div></div>
+  </section>
+  </main>
 
 <div class="w3-content w3-container w3-padding-64" id="contact">
 
