--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </div>
   <img src="IMG-20240302-WA0014.jpg" hight="500" width="350">
 <!-- Container (Contact Section) -->
-  <link rel="stylesheet" href="mystyle.css">
+  <link rel="stylesheet" href="style.css">
   <main class="container">
   <p>Hello 👋 I'm</p>
   <section class="animation">
