--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <!-- Container (Contact Section) -->
   <link rel="stylesheet" href="style.css">
   <main class="container">
-  <p>Hello 👋 I'm</p>
+  <p style="color:black">SKYWEB</p>
   <section class="animation">
     <div class="first"><div>Carlos Córdova</div></div>
     <div class="second"><div>Web Developer</div></div>
