--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
 </div>
   <img src="IMG-20240302-WA0014.jpg" hight="500" width="350">
 <!-- Container (Contact Section) -->
+  <div>
+  <link rel="stylesheet" href="./style.css">
+<!-- partial:index.partial.html -->
+<main class="container">
+  <p>Hello ðŸ‘‹ I'm</p>
+  <section class="animation">
+    <div class="first"><div>Carlos CÃ³rdova</div></div>
+    <div class="second"><div>Web Developer</div></div>
+    <div class="third"><div>Systems Engineer</div></div>
+  </section>
+</main>
+  </div>
 <div class="w3-content w3-container w3-padding-64" id="contact">
 
   <h3 class="w3-center">WHERE I WORK</h3>
