--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <img src="IMG-20240302-WA0014.jpg" hight="500" width="350">
 <!-- Container (Contact Section) -->
   <div>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 <!-- partial:index.partial.html -->
 <main class="container">
   <p>Hello ðŸ‘‹ I'm</p>
