--- a/Prime.html
+++ b/Prime.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <body>
+      <link rel="stylesheet" href="Abbu.css">
 <div class="container">
     <div class="card">
         <h1 class="card_title">Login to your account</h1>
