--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <li>50 Emails</li>
     <li>free Domain</li>
     <li>app support/free maintain</li>
-    <li class="grey"><a href="Prime.html" class="button">Sign Up</a></li>
+    <li class="grey"><a href="Pro.html" class="button">Sign Up</a></li>
   </ul>
 </div>
   
