--- a/Pro.html
+++ b/Pro.html
@@ -13,7 +13,7 @@
 
 <body>
 
-<h2 class="w3-center">Automatic Slideshow</h2>
+<h2 class="w3-center">PRO LOGIN</h2>
 
 <div class="w3-content w3-section" style="max-width:500px">
   <img class="mySlides" src="img_la.jpg" style="width:100%">
