--- a/Pro.html
+++ b/Pro.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>W3.CSS</title>
+<title>pro</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,6 +21,46 @@
   <img class="mySlides" src="img_chicago.jpg" style="width:100%">
 </div>
 
+<div class="w3-top">
+
+  <div class="w3-bar" id="myNavbar">
+
+    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+
+      <i class="fa fa-bars"></i>
+
+    </a>
+
+    <a href="Skywebproject.html" class="w3-bar-item w3-button">welcome to Skyweb</a>
+
+    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
+
+    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
+
+    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
+
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
+
+      <i class="fa fa-search"></i>
+
+    </a>
+
+  </div>
+
+
+  <!-- Navbar on small screens -->
+
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+
+    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
+
+    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
+
+    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
+
+    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
+
+  </div>
 <script>
 var myIndex = 0;
 carousel();
@@ -82,6 +122,7 @@ function carousel() {
 
 <p class="w3-center">
 <button type="submit"  class="w3-button w3-section w3-blue w3-ripple">Send</button>
+  
 </p>
 </form>
 
