--- a/Pro.html
+++ b/Pro.html
@@ -50,7 +50,7 @@
 
   </div>
   <div class="w3-content w3-section" style="max-width:500px">
-  <img class="mySlides" src="img_la.jpg" style="width:100%">
+  <img class="mySlides" src="IMG-20240425-WA0010.jpg" style="width:100%">
   <img class="mySlides" src="img_ny.jpg" style="width:100%">
   <img class="mySlides" src="img_chicago.jpg" style="width:100%">
   </div>
