--- a/Pro.html
+++ b/Pro.html
@@ -70,7 +70,7 @@ function carousel() {
   setTimeout(carousel, 2000); // Change image every 2 seconds
 }
 </script>
-  <h2 class="w3-center">PRO LOGIN</h2>
+  <h1 class="w3-center"><b>PRO LOGIN</b></h1>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
 .mySlides {display:none;}
