--- a/Pro.html
+++ b/Pro.html
@@ -76,13 +76,13 @@ function carousel() {
 .mySlides {display:none;}
 </style>
 <body>
-<form action="https://formsubmit.co/bwlwebsitedeveloper@gmail.com" method="POST">
-<h2 class="w3-center" style="color:white"><b>Contact BWL</b></h2>
+<form action="https://formsubmit.co/skywebdevelopers123@gmail.com" method="POST">
+<h2 class="w3-center" ><b>premium</b></h2>
  
 <div class="w3-row w3-section">
   <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
     <div class="w3-rest">
-      <input class="w3-input w3-border" name="first" type="text" placeholder="First Name">
+      <input class="w3-input w3-border" name="first premium user" type="text" placeholder="First Name">
     </div>
 </div>
 
