--- a/Pro.html
+++ b/Pro.html
@@ -12,9 +12,6 @@
 </head>
 
 <body>
-
-<h2 class="w3-center">Automatic Slideshow</h2>
-
 <div class="w3-content w3-section" style="max-width:500px">
   <img class="mySlides" src="img_la.jpg" style="width:100%">
   <img class="mySlides" src="img_ny.jpg" style="width:100%">
@@ -44,7 +41,7 @@ function carousel() {
 <body>
 <img src="IMG_1702311069727.png " width="100%">
 <form action="https://formsubmit.co/bwlwebsitedeveloper@gmail.com" method="POST">
-<h2 class="w3-center" style="color:white"><b>Contact BWL</b></h2>
+<h2 class="w3-center"><b>premium</b></h2>
  
 <div class="w3-row w3-section">
   <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
