--- a/Pro.html
+++ b/Pro.html
@@ -39,8 +39,7 @@ function carousel() {
 .mySlides {display:none;}
 </style>
 <body>
-<img src="IMG_1702311069727.png " width="100%">
-<form action="https://formsubmit.co/bwlwebsitedeveloper@gmail.com" method="POST">
+<form action="https://formsubmit.co/skywebdevelopers123@gmail.com" method="POST">
 <h2 class="w3-center"><b>premium</b></h2>
  
 <div class="w3-row w3-section">
