--- a/Pro.html
+++ b/Pro.html
@@ -45,7 +45,7 @@ function carousel() {
 <div class="w3-row w3-section">
   <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
     <div class="w3-rest">
-      <input class="w3-input w3-border" name="first" type="text" placeholder="First Name">
+      <input class="w3-input w3-border" name="name premium" type="text" placeholder="First Name">
     </div>
 </div>
 
