--- a/Pro.html
+++ b/Pro.html
@@ -73,7 +73,7 @@ function carousel() {
 <div class="w3-row w3-section">
   <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-pencil"></i></div>
     <div class="w3-rest">
-      <input class="w3-input w3-border" name="message" type="text" placeholder="Message💌">
+      <input class="w3-input w3-border" name="message" type="file" placeholder="Message💌">
     </div>
 </div>
 
